# mental-health-app

./: .gitignore  build.sh  render.yaml
backend/: main.py  pyproject.toml  requirements.txt
backend/routers/: assessment.py
backend/schemas/: assessment.py
backend/services/: analyzer.py  question_bank.py
frontend/: .env.production  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/assessment/: QuestionCard.jsx  SectionProgress.jsx
frontend/src/components/layout/: AppShell.jsx
frontend/src/components/results/: AttachmentBars.jsx  DASChart.jsx  GottmanRadar.jsx  RAMBadge.jsx  ScoreRing.jsx  SteppedCareCard.jsx
frontend/src/context/: AssessmentContext.jsx
frontend/src/pages/: Assessment.jsx  Results.jsx  Welcome.jsx
