[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mental-health-api"
version = "1.0.0"
description = "Psychotechnological Relationship Support API"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.9.0",
    "python-multipart==0.0.20",
    "httpx==0.28.1",
    "numpy==1.26.4",
    "scikit-learn==1.5.1",
    "python-dotenv==1.0.1"
]

[tool.setuptools]
packages = ["routers", "schemas", "services"]
